dfix bug in sticky header on mobile

--- a/styles/css/vtex.store-header.css
+++ b/styles/css/vtex.store-header.css
@@ -24,7 +24,8 @@
   }
 }
 
-:global(.vtex-sticky-layout-0-x-container) {
+:global(.vtex-sticky-layout-0-x-container)
+:global(.vtex-flex-layout-0-x-flexRow--main-header) {
   height: 0.1px;
 }
 
